--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -23,15 +23,24 @@ body {
   font-family: sans-serif;
 }
 
+.parent-container{
+  background: #23424a;
+}
+
 .container {
   width: 80%;
   max-width: 750px;
   margin: 0 auto;
-  background: #23424a;
   color: white;
   padding: 50px 0;
 }
 
 .intro-content {
   width: 50%;
+}
+
+.more-content{
+  width:80%;
+  max-width:750px;
+  margin: 0 auto;
 }
