--- a/Challenge06/style.css
+++ b/Challenge06/style.css
@@ -72,15 +72,18 @@ header {
     background: #136c72;
     padding: 1em 0;
 }
-
+.nav{
+    display: flex;
+    justify-content: space-between;
+}
 .nav__list {
     margin: 0;
     padding: 0;
     list-style: none;
     display: flex;
 }
-.nav__item{
-    margin-right: 1rem;
+.nav__item +.nav__item{
+    margin-left: 1rem;
 }
 
 .nav__link {
