apply media query

--- a/Challenge06/style.css
+++ b/Challenge06/style.css
@@ -145,3 +145,14 @@ header {
     background-color: #136c72;
 }
 
+@media (max-width:600px){
+    .row{
+        display: block;
+    }
+    .hero__text, .hero__img, .primary-content, .sidebar{
+        width: 100%;
+    }
+    .hero__img{
+        margin-top: 2rem;
+    }
+}
