--- a/Challenge08/style.css
+++ b/Challenge08/style.css
@@ -124,7 +124,9 @@ header {
     visibility: hidden;
     height: 0;
     position: absolute;
+    font-size: 1rem;
 }
+
 
 .nav--visible {
     visibility: visible;
@@ -132,6 +134,32 @@ header {
     position: relative;
 } 
 
+.nav__list{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.nav__list--primary{
+    margin-bottom: 2rem;
+}
+
+.nav__item{
+    margin: 0.75rem;
+}
+.nav__link{
+    color: #FFF;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.nav__link--button{
+    padding: 0.25rem 0.75rem;
+    background-color: #fff;
+    color: #23424A;
+    border-radius: 100px;
+}
+.nav__link:hover, .nav__link:focus{
+    opacity: 0.75;
+}
 
 .logo {
     height: 30px;
@@ -178,7 +206,20 @@ header {
     .nav {
         visibility: visible;
         display: flex;
+        align-items: center;
+        justify-content: flex-end;
         height: auto;
+        position: relative;
+    }
+    .nav__list{
+        display: flex;
+        margin: 0;
+    }
+    .nav__list--primary{
+        margin: 0 auto;
+    }
+    .nav__item{
+        margin: 0 0 0 1.5rem;
     }
 
     .row {
